@@ -1,5 +1,6 @@
 Hot Commands for Visual Studio
 
+17-May-2018: v2.1.3 Improved page scroll for MoveMember Up/Down and GoToNext/Prev Member
 05-Apr-2018: v2.1.1 Packaged for release to VS2015 and VS2017
 13-Mar-2018: v2.1.0 Added feature: GoToLastEditLocation
 24-Dec-2017: v2.0.0 HotRefactorings removed and now available as a separate extension.
